2000-02-20  Anthony Green  <green@cygnus.com>

	* Makefile.in: Rebuilt.
	* Makefile.am (ordinary_java_source_files): Add
	gnu/gcj/io/DefaultMimeTypes.java and gnu/gcj/io/MimeTypes.java

	* scripts/MakeDefaultMimeTypes.java: New file.
	* scripts/mime.types: New file.
	* scripts/classes.pl: Moved from top level.
	* classes.pl: Moved to scripts directory.

	* java/net/URLConnection.java: Implement guessContentTypeFromName.

	* gnu/gcj/io/MimeTypes.java: New file.
	* gnu/gcj/io/DefaultMimeTypes.java: New file.

2000-02-20  Tom Tromey  <tromey@cygnus.com>

	* boehm.cc (_Jv_AllocBytes): Clear returned memory.

2000-02-19  Bryce McKinlay  <bryce@albatross.co.nz>

	* java/util/zip/ZipEntry.java (setCrc): Fix overflow.
	(setSize): ditto.

2000-02-18  Tom Tromey  <tromey@cygnus.com>

	* include/jvm.h (_Jv_GetJavaVM): Declare.
	* include/java-interp.h (_Jv_GetFirstMethod): New function.
	(_Jv_MethodBase::get_method): New method.
	(_Jv_JNIMethod::set_function): New method.
	* jni.cc (_Jv_JNI_UnregisterNatives): New function.
	(_Jv_JNI_RegisterNatives): New function.
	(_Jv_JNIFunctions): Updated for new functions.
	(_Jv_GetJavaVM): New function.
	(_Jv_JNI_GetJavaVM): Use it.  Now static.
	(_Jv_JNI_AttachCurrentThread): Create a new JNIEnv if this thread
	is already a Java thread but does not have a JNIEnv yet.

	* java/lang/natRuntime.cc (_load): Pass the JavaVM to the onload
	function.

2000-02-17  Tom Tromey  <tromey@cygnus.com>

	* gcj/field.h (_Jv_Field::getClass): Don't use JvAssert.
	Fixes PR gcj/152.

2000-02-16  Tom Tromey  <tromey@cygnus.com>

	* jni.cc (_Jv_JNI_CallStaticMethodV): Added some assertions.

	* jni.cc (_Jv_JNI_NewObjectV): Corrected assertion.
	(_Jv_JNI_NewObject): Likewise.
	(_Jv_JNI_NewObjectA): Likewise.
	(_Jv_JNI_CallAnyMethodV): In constructor case, pass correct value
	as "return" type to _Jv_CallAnyMethodA.
	(_Jv_JNI_CallAnyMethodA): Likewise.
	(_Jv_JNI_CallAnyVoidMethodV): Likewise.

	* jni.cc (_Jv_JNI_FindClass): Use ClassLoader.loadClass, not